# CryptoUpbitData

./: .gitignore  pyproject.toml
app/upbit/data/: fetch_candle.py  fetch_history.py  fetch_ticker.py  run_saveprice_daily.py  run_saveprice_minute.py  saveprice.py
app/upbit/data/util/: db_conn.py  db_table_daily.py  db_table_min.py
docker_upbit/: .dockerignore  Dockerfile  crontab  docker-compose.yml  entrypoint.sh
